--- a/style.css
+++ b/style.css
@@ -14,3 +14,31 @@
 .booksDiv {
   margin-bottom: 10px;
 }
+
+.booksDiv div:nth-child(odd) {
+  background-color: #f1f1f1;
+}
+
+.border {
+  border: 1px solid black;
+}
+
+.addBookForm__h1 {
+  margin: 0;
+}
+
+.hr--list {
+  width: 25%;
+}
+
+.book {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.add-btn {
+  width: 60px;
+  align-self: flex-end;
+}
