--- a/style.css
+++ b/style.css
@@ -1,5 +1,39 @@
+body {
+  display: block;
+  margin: 0;
+}
+
 .awesome-books h1 {
   text-align: center;
+  margin-bottom: 40px;
+}
+
+.awesome-books__nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #000;
+  padding: 0 10px;
+  margin-bottom: 50px;
+}
+
+.awesome-books__nav-list {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding-right: 0;
+  gap: 20px;
+}
+
+.awesome-books__nav-link {
+  text-decoration: none;
+  color: #000;
+}
+
+.nav__link--1,
+.nav__link--2 {
+  border-right: 1px solid #000;
+  padding-right: 20px;
 }
 
 .addBookForm {
@@ -38,7 +72,23 @@
   margin: 0 auto;
 }
 
+#title {
+  margin-bottom: 15px;
+}
+
+#author {
+  margin-bottom: 20px;
+}
+
 .add-btn {
   width: 60px;
   align-self: flex-end;
+}
+
+.copyright {
+  position: fixed;
+  bottom: 0;
+  border: 1px solid #000;
+  width: 100%;
+  padding: 0 10px;
 }
