--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
 
 .awesome-books h1 {
   text-align: center;
-  margin-bottom: 40px;
 }
 
 .awesome-books__nav {
@@ -49,6 +48,10 @@ body {
   margin-bottom: 10px;
 }
 
+.bookDiv {
+  padding: 0 100px;
+}
+
 .booksDiv div:nth-child(odd) {
   background-color: #f1f1f1;
 }
@@ -61,8 +64,12 @@ body {
   margin: 0;
 }
 
-.hr--list {
-  width: 25%;
+.contactPage {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
 }
 
 .book {
@@ -70,6 +77,7 @@ body {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 #title {
@@ -83,6 +91,7 @@ body {
 .add-btn {
   width: 60px;
   align-self: flex-end;
+  margin-bottom: 20px;
 }
 
 .copyright {
@@ -91,4 +100,17 @@ body {
   border: 1px solid #000;
   width: 100%;
   padding: 0 10px;
+}
+
+.invisible {
+  display: none;
+}
+
+.alert {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f44336;
+  color: white;
+  padding: 5px;
 }
